--- a/Chess/Chess.vbproj
+++ b/Chess/Chess.vbproj
@@ -241,6 +241,9 @@
   <ItemGroup>
     <None Include="Resources\V_Move .png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\MainBG.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
